# arc4

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
src/: CMakeLists.txt
test/: CMakeLists.txt  test.c
